@@ -1,21 +1,24 @@
 package com.allknu.fcm.application;
 
+import com.allknu.fcm.application.dto.PushToTopicsRequestDto;
 import com.allknu.fcm.domain.AndroidPriority;
 import com.allknu.fcm.domain.ApnsPriority;
 import com.allknu.fcm.domain.ApnsPushType;
 import com.allknu.fcm.domain.SubscribeType;
+import com.allknu.fcm.application.dto.UpdateSubscribeTopicsRequestDto;
+import com.allknu.fcm.global.exception.errors.PushMessageFailedException;
+import com.allknu.fcm.global.exception.errors.UnsubscribeFailedException;
+import com.allknu.fcm.global.exception.errors.UpdateSubscribeTopicFailedException;
 import com.google.firebase.messaging.*;
-import org.springframework.stereotype.Component;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.EnumSet;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 
+@Slf4j
 @Service
-public class FcmService {
+public class PushService {
 
     // 기본 설정을 해준 메시지 빌더 반환
     private Message.Builder defaultMessageBuilder(String title, String body, String clickLink, ApnsPushType apnsPushType, ApnsPriority apnsPriority, AndroidPriority androidPriority) {
@@ -48,9 +51,8 @@ public class FcmService {
         data.put("link", clickLink);
 
         /* // data 설정 끝 // */
-
         // See documentation on defining a message payload.
-        Message.Builder defaultMessageBuilder = Message.builder()
+        return Message.builder()
                 .setAndroidConfig(androidConfigBuilder.build())
                 .setApnsConfig(apnsConfigBuilder.build())
                 .putAllData(data)
@@ -63,85 +65,92 @@ public class FcmService {
                                 .setLink(clickLink)
                                 .build())
                         .build());
-
-        return defaultMessageBuilder;
     }
 
     //unsubscribe from all topic
-    public void unsubscribeFromAllTopics(List<String> tokens) {
+    private void unsubscribeFromAllTopics(List<String> tokens) {
         //해당 토큰들의 모든 구독을 취소한다.
         EnumSet.allOf(SubscribeType.class)
                 .forEach(type -> {
                     try {
-                        TopicManagementResponse response = FirebaseMessaging.getInstance().unsubscribeFromTopic(tokens, type.toString());
-                        System.out.println(response.getSuccessCount() + " tokens were unsubscribed successfully");
+                        TopicManagementResponse response = FirebaseMessaging.getInstance()
+                                .unsubscribeFromTopic(tokens, type.toString());
+
+                        log.info(response.getSuccessCount() + " tokens were unsubscribed successfully");
                     } catch (FirebaseMessagingException e) {
-                        System.out.println("구독 해지 실패");
-                        e.printStackTrace();
+                        throw new UnsubscribeFailedException();
                     }
                 });
     }
 
     //토큰들을 주제에 구독하는 메서드
-    public TopicManagementResponse subscribeTopic(List<String> tokens, String topic) throws FirebaseMessagingException {
-        // These registration tokens come from the client FCM SDKs.
-
-        // Subscribe the devices corresponding to the registration tokens to the
-        // topic.
-        TopicManagementResponse response = FirebaseMessaging.getInstance().subscribeToTopic(
-                tokens, topic);
-        // See the TopicManagementResponse reference documentation
-        // for the contents of response.
-        System.out.println(response.getSuccessCount() + " tokens were subscribed successfully");
-        return response;
+    private void subscribeTopic(List<String> tokens, String topic) throws FirebaseMessagingException {
+        TopicManagementResponse response = FirebaseMessaging.getInstance().subscribeToTopic(tokens, topic);
+        log.info(response.getSuccessCount() + " tokens were subscribed successfully");
     }
 
     // 공식 문서에 보면 토픽 지정 보내기, 여러 토큰에 한번에 보내기가 있다. 필요할 때마다 추가해 사용하자드
     //특정 토큰에 메시지 전송
     public void sendToOneToken(String targetToken, String title, String body, String clickLink, ApnsPushType apnsPushType, ApnsPriority apnsPriority, AndroidPriority androidPriority) throws FirebaseMessagingException {
-        // [START send_to_token]
-        // This registration token comes from the client FCM SDKs.
-        String registrationToken = targetToken;
-
         // 기본 메시지 빌더 불러오기
         Message.Builder messageBuilder = defaultMessageBuilder(title, body, clickLink, apnsPushType, apnsPriority, androidPriority);
 
-        // 토큰 할당
-        messageBuilder.setToken(registrationToken);
+        messageBuilder.setToken(targetToken);
 
-        // Send a message to the device corresponding to the provided
-        // registration token.
         String response = FirebaseMessaging.getInstance().send(messageBuilder.build());
-        // Response is a message ID string.
-        System.out.println("Successfully sent message: " + response);
-        // [END send_to_token]
+        log.info("Successfully sent message: " + response);
     }
 
     //토픽들에게 메시지 전송
-    public void sendFCMToTopics(List<SubscribeType> subscribeTypes, String title, String body, String clickLink, ApnsPushType apnsPushType, ApnsPriority apnsPriority, AndroidPriority androidPriority) throws FirebaseMessagingException {
+    public void pushToTopics(PushToTopicsRequestDto requestDto) {
         // Define a condition which will send to devices which are subscribed
         //String condition = "'stock-GOOG' in topics || 'industry-tech' in topics";
 
         StringBuilder conditionBuilder = new StringBuilder();
-        if(subscribeTypes.size() > 0) {
-            conditionBuilder.append("'" + subscribeTypes.get(0).toString() + "' in topics");
+        if(!requestDto.getSubscribeTypes().isEmpty()) {
+            conditionBuilder.append("'" + requestDto.getSubscribeTypes().getFirst().toString() + "' in topics");
         }
-        for(int i = 1 ; i < subscribeTypes.size() ; i++) {
+        for(int i = 1 ; i < requestDto.getSubscribeTypes().size() ; i++) {
             if(i >= 5) break; // 주제는 5개까지만 된다더라
-            conditionBuilder.append(" || '" + subscribeTypes.get(i).toString() + "' in topics");
+            conditionBuilder.append(" || '" + requestDto.getSubscribeTypes().get(i).toString() + "' in topics");
         }
 
         // 기본 메시지 빌더 불러오기
-        Message.Builder messageBuilder = defaultMessageBuilder(title, body, clickLink, apnsPushType, apnsPriority, androidPriority);
+        Message.Builder messageBuilder = defaultMessageBuilder(requestDto.getTitle(),
+                requestDto.getBody(),
+                requestDto.getClickLink(),
+                requestDto.getApnsPushType(),
+                requestDto.getApnsPriority(),
+                requestDto.getAndroidPriority());
 
         // 토픽 할당
         messageBuilder.setCondition(conditionBuilder.toString());
 
         // Send a message to devices subscribed to the combination of topics
         // specified by the provided condition.
-        String response = FirebaseMessaging.getInstance().send(messageBuilder.build());
-        // Response is a message ID string.
-        System.out.println("Successfully sent message: " + response);
+        try {
+            String response = FirebaseMessaging.getInstance()
+                    .send(messageBuilder.build());
+            // Response is a message ID string.
+            log.info("Successfully sent message: " + response);
+        } catch (FirebaseMessagingException exception) {
+            throw new PushMessageFailedException();
+        }
+    }
+
+    public void updateSubscribeTopics(UpdateSubscribeTopicsRequestDto requestDto) {
+        try {
+            unsubscribeFromAllTopics(Collections.singletonList(requestDto.getToken())); // 구독 전에 기존 모든 구독을 해지한다.
+
+            List<SubscribeType> topics = requestDto.getSubscribes();
+            if(topics != null) {
+                for (SubscribeType topic : topics) {
+                    subscribeTopic(Collections.singletonList(requestDto.getToken()), topic.toString()); // 반복문으로 토픽 구독
+                }
+            }
+        }catch (FirebaseMessagingException firebaseMessagingException) {
+            throw new UpdateSubscribeTopicFailedException();
+        }
     }
 }
 
